syntax = "proto3";
package kira.custody;

import "gogoproto/gogo.proto";
import "kira/custody/custody.proto";

option go_package = "github.com/KiraCore/sekai/x/custody/types";

message GenesisState {
    uint64 max_custody_buffer_size = 1;
    uint64 max_custody_tx_size = 2;
}
